# reki

./: .gitignore  .impeccable.md  DESIGN.md  IDEAS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-04-07-markdown-katex-rendering.md  2026-04-10-cloze-deletion.md  2026-04-10-review-statistics.md
docs/superpowers/specs/: 2026-04-07-markdown-katex-rendering-design.md  2026-04-10-cloze-deletion-design.md  2026-04-10-review-statistics-design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  media.rs  srs.rs
src/lib/: cloze.test.ts  cloze.ts  markdown.test.ts  markdown.ts  media.ts  query.ts  stats.test.ts  stats.ts
src/lib/components/: Markdown.svelte  MarkdownEditor.svelte  Sidebar.svelte
src/lib/components/charts/: BarChart.svelte  DonutChart.svelte  StatCard.svelte
src/lib/pages/: BrowsePage.svelte  DecksPage.svelte  GeneratePage.svelte  ReviewPage.svelte  SettingsPage.svelte  StatsPage.svelte
src/lib/stores/: data.ts  router.ts  shortcuts.ts  srs.ts  stats.ts  theme.ts
