[package]
name = "reki"
version = "0.1.0"
description = "Reki 歴 — Modern spaced repetition"
authors = ["zhou-zhichao <zhichao@outlook.at>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "reki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
fsrs = "5.2.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
